added comment for DNS server used

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: "3"
 services:
   ovpn_proxy:
-#	image: andymeful/privoxy-openvpn
-    build: . 
+    image: andymeful/privoxy-openvpn
+    #build: .
     cap_add:
       - NET_ADMIN
     devices:
       - /dev/net/tun
+    # cloudflare DNS
     dns:
       - 1.1.1.1
       - 1.0.0.1
