Fixes #7. Onlinecheck implemented.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     environment:
       - OPENVPN_FILENAME=uk-london-aes128.ovpn
       - LOCAL_NETWORK=192.168.1.0/24
+      - ONLINECHECK_DELAY=900
     ports:
       - 8080:8080
     restart: always
