--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
-version: '2'
+version: "3"
 services:
   ovpn_proxy:
     image: andymeful/privoxy-openvpn
+    #build: .
     cap_add:
       - NET_ADMIN
     devices:
       - /dev/net/tun
+    # cloudflare DNS
     dns:
       - 1.1.1.1
       - 1.0.0.1
     volumes:
-      - /etc/localtime:/etc/caltime:ro
+      - ./openvpn-config:/app/ovpn/config
     environment:
-      - OPENVPN_FILE_SUBPATH=pia/uk-london.ovpn
-      - OPENVPN_USERNAME=null
-      - OPENVPN_PASSWORD=null
+      - OPENVPN_FILENAME=uk-london-aes128.ovpn
       - LOCAL_NETWORK=192.168.1.0/24
+      - ONLINECHECK_DELAY=900
     ports:
       - 8080:8080
     restart: always
